<resources>
  <string name="app_name">Gallery</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->
  <string name="gallery_fragment_label">Gallery Fragment</string>
  <string name="image_fragment_label">Image Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="title_activity_login">LoginActivity</string>
  <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
  <string name="hello_world">Hello Square World!</string>
  <string name="login_failure_message">Unable to sign in with the provided credentials</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="upload_properties_title">Upload Properties</string>
  <string name="title_hint">Title of image*</string>
  <string name="description_hint">Description of image</string>
  <string name="pick_image_title">Choose image to upload</string>
  <string name="gallery_title">Title</string>
  <string name="description">Description</string>
  <string name="image_title">Image title</string>
  <string name="image_description">Image description</string>
  <string name="gallery_title_in_image">Gallery title in image</string>
  <string name="image_detail_description">Image detail description</string>
  <string name="image_id">Image Id</string>
  <string name="image_type">Image type</string>
  <string name="image_url">Image URL</string>
  <string name="date_time">Date Time</string>
  <string name="gallery_image">Gallery image</string>
</resources>