<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.ImageDialogFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/image_detail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:scaleType="centerInside"
      android:adjustViewBounds="true"
      android:contentDescription="@string/gallery_image"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:layout_constraintBottom_toTopOf="@id/image_description"/>

    <TextView
      android:id="@+id/image_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      android:text="@string/image_detail_description"
      app:layout_constraintTop_toBottomOf="@id/image_detail"
      app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
      android:id="@+id/detail_linear_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/image_details_separator"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:layout_constraintTop_toBottomOf="@id/image_description">

      <TextView
        android:id="@+id/image_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_id"
        style="@style/ImageAttribute"/>

      <TextView
        android:id="@+id/image_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type"
        style="@style/ImageAttribute"/>

      <TextView
        android:id="@+id/image_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_url"
        style="@style/ImageAttribute"/>

      <TextView
        android:id="@+id/image_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        style="@style/ImageAttribute"/>

    </LinearLayout>



  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>